# pistactl

./: Cargo.toml  Makefile
examples/: .pistactl.toml
examples/minimal/: .pistactl.toml
examples/real/: .pistactl.toml
src/: main.rs
src/lib/: cfg.rs  cli.rs  cmd.rs  fs.rs  logger.rs  mod.rs  process.rs  scripts.rs  tmux.rs  x11.rs
